tests/rosetta/out/Smalltalk/averages-arithmetic-mean.out
/tmp/averages-arithmetic-mean.st:9: parse error, expected ']'
