tests/rosetta/out/Smalltalk/averages-arithmetic-mean.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| i main mean r sets sum |
mean := [:v | (((v size) = 0)) ifTrue: [
  Dictionary from: {'ok' -> false}
] .
sum := 0.
i := 0.
[(i < (v size))] whileTrue: [
  sum := (sum + v at: i).
  i := (i + 1).
]
.
Dictionary from: {'ok' -> true. 'mean' -> (sum / (v size) asFloat)} ].
main := [ | sets := {{}. {3. 1. 4. 1. 5. 9}. {1e+20. 3. 1. 4. 1. 5. 9. -1e+20}. {10. 9. 8. 7. 6. 5. 4. 3. 2. 1. 0. 0. 0. 0. 0.11}. {10. 20. 30. 40. 50. -100. 4.7. -1100}}.
sets do: [:v |
  Transcript show: (('Vector: ' + (v asString))) printString; cr.
  r := mean value: v.
  (r at: 'ok') ifTrue: [
    Transcript show: (((('Mean of ' + ((v size) asString)) + ' numbers is ') + (r at: 'mean' asString))) printString; cr.
  ] ifFalse: [
    Transcript show: 'Mean undefined'; cr.
  ].
  Transcript show: ''; cr.
]
. ].
main value.
